# CASE-Utilities-Python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODEMETA.yaml  CONTRIBUTE.md  LICENSE  Makefile  NOTICE  README.md  README_PyPI.md  case_validate.spec  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  cicd.yml  prerelease.yml
case_utils/: __init__.py  inherent_uuid.py  local_uuid.py  namespace.py  py.typed
case_utils/case_file/: __init__.py
case_utils/case_sparql_construct/: __init__.py
case_utils/case_sparql_select/: __init__.py
case_utils/case_validate/: __init__.py  validate_types.py  validate_utils.py
case_utils/ontology/: Makefile  __init__.py  case-0.5.0-subclasses.ttl  case-0.5.0.ttl  case-0.7.1.ttl  case-1.0.0-subclasses.ttl  case-1.0.0.ttl  case-1.1.0-subclasses.ttl  case-1.1.0.ttl  case-1.2.0-subclasses.ttl  case-1.2.0.ttl  case-1.3.0-subclasses.ttl  case-1.3.0.ttl  ontology_and_version_iris.txt  version_info.py
case_utils/ontology/src/: README.md  ontology_and_version_iris.py  subclasses_ttl.py
tests/: .gitignore  Makefile  README.md  requirements.txt
tests/case_file/: Makefile  kb.json  kb.ttl  sample.txt-disable_hashes.ttl  sample.txt-nocompact.json  sample.txt.json  sample.txt.ttl  sample_txt.py  test_case_file.py
tests/case_sparql_construct/: .gitignore  Makefile  README.md  input-2.ttl  input-3.json  test_case_sparql_construct.py
tests/case_sparql_select/: .check-output.md  .gitignore  Makefile  input-1.sparql
tests/case_utils/: Makefile  test_guess_format.py  test_local_uuid.py
tests/case_utils/case_file/: Makefile  kb.json  kb.ttl  sample.txt-disable_hashes.ttl  sample.txt-nocompact.json  sample.txt.json  sample.txt.ttl  sample_txt.py  test_case_file.py
tests/case_utils/case_sparql_construct/: .gitignore  Makefile  README.md  input-1.sparql  subclass.json  subclass.sparql  test_case_sparql_construct.py
tests/case_utils/case_sparql_select/: .check-prefixed_results-indented.json  .check-prefixed_results.csv  .check-prefixed_results.html  .check-prefixed_results.json  .check-prefixed_results.md  .check-prefixed_results.tsv  .check-subclass-explicit-none.md  .check-subclass-implicit-any.md  .check-w3-output-indented.json  .check-w3-output-with_header-with_index-orient-columns.json  .check-w3-output-with_header-with_index-orient-split.json  .check-w3-output-with_header-with_index-orient-table.json  .check-w3-output-with_header-with_index-orient-values.json  .check-w3-output-with_header-with_index.html  .check-w3-output-with_header-with_index.md  .check-w3-output-with_header-without_index-orient-records.json  .check-w3-output-with_header-without_index-orient-split.json  .check-w3-output-with_header-without_index.csv  .check-w3-output-with_header-without_index.html  .check-w3-output-with_header-without_index.md  .check-w3-output-with_header-without_index.tsv  .check-w3-output-without_header-with_index-orient-index.json  .check-w3-output-without_header-with_index.csv  .check-w3-output-without_header-with_index.html  .check-w3-output-without_header-with_index.md  .check-w3-output-without_header-with_index.tsv  .check-w3-output-without_header-without_index-orient-table.json  .check-w3-output-without_header-without_index.csv  .check-w3-output-without_header-without_index.html  .check-w3-output-without_header-without_index.md  .check-w3-output-without_header-without_index.tsv  .check-w3-output.csv  .gitignore  (+9 more)
tests/hexbinary/: test_hexbinary.py
tests/isomorphic_diff/: .gitignore  Makefile  rdflib_compare_isomorphic_docstring_g1.json  rdflib_compare_isomorphic_docstring_g1.ttl  rdflib_compare_isomorphic_docstring_g2.ttl  rdflib_compare_isomorphic_docstring_g3.ttl
tests/lib/: Makefile
tests/src/: README.md  compact.py  glom_graph.py  isomorphic_diff.py
(+33 files in other folders)
