[metadata]
name = case_utils
version = attr: case_utils.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = Python utilities for working with the CASE ontology
# TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Utilities-Python
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
# TODO The constraint on pyparsing can be removed when rdflib Issue #1190 is resolved.
# https://github.com/RDFLib/rdflib/issues/1190
install_requires =
    # Note that numpy (pandas dependency) is only supported in Python >= 3.7.
    pandas;python_version>='3.7'
    pyparsing < 3.0.0
    rdflib-jsonld
    requests
    tabulate
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    case_file = case_utils.case_file:main
    case_sparql_construct = case_utils.case_sparql_construct:main
    # Note that numpy (pandas dependency, and pandas is dependency of case_sparql_select) is only supported in Python >= 3.7.
    case_sparql_select = case_utils.case_sparql_select:main
