[metadata]
name = case_utils
version = attr: case_utils.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = Python utilities for working with the CASE ontology
# TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Utilities-Python
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
install_requires =
    pandas
    pyshacl
    rdflib >= 6.0.2
    requests
    tabulate
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    case_file = case_utils.case_file:main
    case_sparql_construct = case_utils.case_sparql_construct:main
    case_sparql_select = case_utils.case_sparql_select:main
    case_validate = case_utils.case_validate:main

[options.package_data]
case_utils = py.typed
case_utils.ontology = *.ttl
