[metadata]
name = case_utils
version = attr: case_utils.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = Python utilities for working with the CASE ontology
long_description = file: README_PyPI.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Utilities-Python
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
license_files =
    LICENSE
    THIRD_PARTY_LICENSES.md

[options]
include_package_data = true
install_requires =
    pandas
    pyshacl < 0.22.0
    rdflib >= 6.2.0, < 6.3.0
    requests
    tabulate
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    case_file = case_utils.case_file:main
    case_sparql_construct = case_utils.case_sparql_construct:main
    case_sparql_select = case_utils.case_sparql_select:main
    case_validate = case_utils.case_validate:main

[options.package_data]
case_utils = py.typed
case_utils.ontology = *.ttl

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E302
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
